--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "eslint": "7.10.0",
-    "eslint-config-trybe-backend": "1.0.1"
+    "eslint-config-trybe-backend": "1.0.1",
+    "eslint-plugin-sonarjs": "^0.6.0"
   }
 }
