--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     "shelljs": "0.8.4"
   },
   "devDependencies": {
-    "eslint": "7.10.0",
-    "eslint-config-trybe-backend": "1.0.1",
-    "eslint-plugin-sonarjs": "^0.6.0"
+    "eslint-config-trybe-backend": "1.0.1"
   }
 }
